# eon-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml  release.txt  test.eon  test_eon.py
.github/workflows/: release.yml  test.yml
