[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "eon"
version = "0.1.0"
description = "Python bindings for the EON (Extensible Object Notation) format"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
python-source = "src"
module-name = "eon._eon"

[tool.cibuildwheel]
# Skip Python 3.7 and PyPy
skip = ["cp37-*", "pp*", "*-musllinux_i686"]

# Test command to ensure the wheel works
test-command = "python -c 'from eon import loads; print(loads(\"42\"))'"